# image-comparison

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  notes.txt
include/: ErrorPixelTransform.h  ImageComparator.h  ImageHandler.h  ImageUtils.h  Interface.h  JsonUtils.h  Logger.h
include/Comparator/: ImageComparator.h  ImageHandler.h  ImageUtils.h
lib/: compare-engine-bin  image_comparison
lib/lib64/: .libcrypto.so.1.0.2k.hmac  .libgcrypt.so.11.hmac  .libssl.so.1.0.2k.hmac  libEGL_mesa.so.0.0.0  libGLX_mesa.so.0.0.0  libHalf.so.6.0.0  libIex.so.6.0.0  libIexMath.so.6.0.0  libIlmImf.so.7.0.0  libIlmThread.so.6.0.0  libImath.so.6.0.0  libX11-xcb.so.1.0.0  libXcomposite.so.1.0.0  libXrandr.so.2.2.0  libXv.so.1.0.0  libacl.so.1.1.0  libasan.so.4.0.0  libasound.so.2.0.0  libassuan.so.0.4.0  libatk-1.0.so.0.22209.1  libatomic.so.1.2.0  libauparse.so.0.0.0  libavahi-client.so.3.2.9  libavahi-common.so.3.5.3  libcap.so.2  libcap.so.2.54  libcdda_interface.so.0.10.2  libcdda_paranoia.so.0.10.2  libcilkrts.so.5.0.0  libcom_err.so.2.1  libcrack.so.2.9.0  libcups.so.2  libcupscgi.so.1  libcupsimage.so.2  libcupsmime.so.1  libcupsppdc.so.1  libdbus-1.so.3.14.14  libdevmapper.so.1.02  libdrm.so.2.4.0  libdrm_amdgpu.so.1.0.0  (+133 more)
lib/lib64/cmake/OpenCV/: OpenCVConfig.cmake
lib/lib64/fipscheck/: fipscheck.hmac  libfipscheck.so.1.2.1.hmac  libgmp.so.10.2.0.hmac  ssh.hmac
lib/lib64/gconv/: gconv-modules.cache
lib/lib64/girepository-1.0/: Atk-1.0.typelib  Gst-0.10.typelib  GstApp-0.10.typelib  GstAudio-0.10.typelib  GstBase-0.10.typelib  GstInterfaces-0.10.typelib  GstNet-0.10.typelib  GstPbutils-0.10.typelib  GstRtp-0.10.typelib  GstRtsp-0.10.typelib  GstVideo-0.10.typelib
lib/lib64/gtk-2.0/2.10.0/: immodules.cache
lib/lib64/libv4l/: ov511-decomp  ov518-decomp
lib/lib64/nss/unsupported-tools/: atob  bltest  btoa  dbtool  derdump  fipstest  listsuites  ocspclnt  pp  selfserv  shlibsign  signtool  strsclnt  symkeyutil  tstclnt  validation  vfychain  vfyserv
lib/lib64/perl5/: Config.pm  Config_heavy.pl  Errno.pm  _h2ph_pre.ph  features.ph  signal.ph
lib/lib64/perl5/asm-generic/: ioctls.ph
lib/lib64/perl5/bits/: siginfo-consts.ph  socket.ph  syscall.ph  thread-shared-types.ph  typesizes.ph
lib/lib64/perl5/sys/: cdefs.ph  socket.ph  ucontext.ph  wait.ph
lib/lib64/pkgconfig/: libcurl.pc  opencv.pc
lib/lib64/python2.7/: BaseHTTPServer.pyo  Bastion.pyo  Cookie.pyo  DocXMLRPCServer.pyo  HTMLParser.pyo  MimeWriter.pyo  Queue.pyo  SimpleHTTPServer.pyo  SocketServer.pyo  StringIO.pyo  UserList.pyo  UserString.pyo  _LWPCookieJar.pyo  _MozillaCookieJar.pyo  __future__.pyo  _sysconfigdata.py  _threading_local.pyo  _weakrefset.pyo  abc.pyo  aifc.pyo  anydbm.pyo  argparse.pyo  ast.pyo  asynchat.pyo  asyncore.pyo  audiodev.pyo  base64.pyo  cgi.py  cgi.pyo  cgitb.pyo  cmd.pyo  codecs.pyo  collections.pyo  cookielib.pyo  copy.pyo  copy_reg.pyo  dbhash.pyo  difflib.pyo  dircache.pyo  dis.pyo  (+90 more)
lib/lib64/python2.7/bsddb/: db.pyo  dbrecio.pyo  dbtables.pyo
lib/lib64/python2.7/compiler/: __init__.pyo  ast.pyo  consts.pyo  pyassem.pyo  pycodegen.pyo  symbols.pyo  transformer.pyo  visitor.pyo
lib/lib64/python2.7/ctypes/: util.pyo
lib/lib64/python2.7/curses/: __init__.pyo  has_key.pyo  panel.pyo
lib/lib64/python2.7/distutils/: archive_util.pyo  ccompiler.pyo  cmd.pyo  config.pyo  cygwinccompiler.pyo  dep_util.pyo  dir_util.pyo  emxccompiler.pyo  extension.pyo  fancy_getopt.pyo  file_util.pyo  log.pyo  msvc9compiler.pyo  sysconfig.py  sysconfig.pyo  unixccompiler.pyo  version.pyo
lib/lib64/python2.7/email/: __init__.pyo  _parseaddr.pyo  charset.pyo  encoders.pyo  feedparser.pyo  header.pyo
lib/lib64/python2.7/encodings/: base64_codec.pyo  big5hkscs.pyo  bz2_codec.pyo  charmap.pyo  cp1006.pyo  cp1250.pyo  cp1251.pyo  cp1256.pyo  cp1258.pyo  cp437.pyo  cp720.pyo  cp737.pyo  cp775.pyo  cp850.pyo  cp852.pyo  cp855.pyo  cp856.pyo  cp857.pyo  cp858.pyo  cp860.pyo  cp861.pyo  cp864.pyo  cp866.pyo  cp869.pyo  cp932.pyo  cp949.pyo  euc_kr.pyo  gb18030.pyo  gb2312.pyo  gbk.pyo  hex_codec.pyo  idna.pyo  iso2022_jp.pyo  iso2022_jp_1.pyo  iso2022_jp_2.pyo  iso2022_jp_2004.pyo  iso2022_jp_ext.pyo  iso8859_10.pyo  iso8859_11.pyo  iso8859_16.pyo  (+26 more)
lib/lib64/python2.7/ensurepip/: __init__.py
lib/lib64/python2.7/hotshot/: __init__.pyo  log.pyo  stats.pyo
lib/lib64/python2.7/idlelib/: AutoComplete.pyo  AutoCompleteWindow.pyo  AutoExpand.pyo  Bindings.pyo  CallTips.pyo  CodeContext.pyo  Debugger.pyo  Delegator.pyo  EditorWindow.pyo  FileList.pyo  FormatParagraph.pyo  GrepDialog.pyo  HyperParser.pyo  MultiCall.pyo  ObjectBrowser.pyo  OutputWindow.pyo  ParenMatch.pyo  Percolator.pyo  PyParse.pyo  PyShell.pyo  RemoteDebugger.pyo  RemoteObjectBrowser.pyo  SearchDialogBase.pyo  SearchEngine.pyo  ToolTip.pyo  UndoDelegator.pyo  WindowList.pyo  aboutDialog.pyo  configDialog.pyo  configHelpSourceEdit.pyo  keybindingDialog.pyo  macosxSupport.pyo  rpc.pyo  run.pyo  tabbedpages.pyo
lib/lib64/python2.7/importlib/: __init__.pyo
lib/lib64/python2.7/json/: __init__.pyo  decoder.pyo  scanner.pyo
lib/lib64/python2.7/lib2to3/: btm_matcher.pyo  main.pyo  patcomp.pyo  pygram.pyo  pytree.pyo  refactor.pyo
lib/lib64/python2.7/logging/: __init__.pyo  config.pyo
lib/lib64/python2.7/multiprocessing/: __init__.pyo  connection.pyo  forking.pyo  heap.pyo  managers.pyo  pool.pyo  process.pyo  queues.pyo  reduction.pyo  (+3 more)
lib/lib64/sasl2/: libanonymous.so.3.0.0  libsasldb.so.3.0.0
src/: ErrorPixelTransform.cpp  ImageComparator.cpp  ImageHandler.cpp  ImageUtils.cpp  JsonUtils.cpp  Logger.cpp  interface.cpp  main.cpp
src/comparator/: ErrorPixelTransform.cpp  ImageComparator.cpp  ImageHandler.cpp  ImageUtils.cpp
test/URL/: urls.json
tests/comparator/: test_image_comparator.cpp
(+124 files in other folders)
